# PythonPipelineDemo

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
pythonpipelinedemo/: main.py
test/: main_test.py
