[tool.poetry]
name = "pythonpipelinedemo"
version = "0.1.0"
description = ""
authors = ["Simon Vestergaard Johansen <SERJA@vestas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
